exports[`RxJS 4 accepts function-based mutations 1`] = `
<div>
  123
</div>
`;

exports[`RxJS 4 ignores not connect properties 1`] = `<div />`;

exports[`RxJS 4 noDebounce 1`] = `
<div>
  0
</div>
`;

exports[`RxJS 4 noDebounce 2`] = `
<div>
  1
</div>
`;

exports[`RxJS 4 passes children automatically 1`] = `
<div>
  Hello, RxConnect!
</div>
`;

exports[`RxJS 4 passes properties as Observable 1`] = `
<div>
  123
</div>
`;

exports[`RxJS 4 receives new props 1`] = `
<div>
  15
</div>
`;

exports[`RxJS 4 receives new props 2`] = `
<div>
  15
</div>
`;

exports[`RxJS 4 receives new props 3`] = `
<div>
  -15
</div>
`;

exports[`RxJS 4 throws an error if mutation is neither an object or function 1`] = `
Array [
  "Mutation must be a plain object or function. Check rxConnect of Component. Got: ",
  Array [
    123,
  ],
]
`;

exports[`RxJS 4 throws an error if selector is neither an Observable or function 1`] = `
Array [
  "Selector must be a function or an Observable. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`RxJS 4 throws an error if selector returns non-Observable 1`] = `
Array [
  "Selector must return an Observable or an iterator of observables. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`RxJS 4 works with Array 1`] = `
<div>
  123
  bar
</div>
`;

exports[`RxJS 4 works with Generator 1`] = `
<div>
  123
  bar
</div>
`;

exports[`RxJS 4 works with Observable 1`] = `
<div>
  123
</div>
`;

exports[`RxJS 5 and 6 accepts function-based mutations 1`] = `
<div>
  123
</div>
`;

exports[`RxJS 5 and 6 ignores not connect properties 1`] = `<div />`;

exports[`RxJS 5 and 6 noDebounce 1`] = `
<div>
  0
</div>
`;

exports[`RxJS 5 and 6 noDebounce 2`] = `
<div>
  1
</div>
`;

exports[`RxJS 5 and 6 passes children automatically 1`] = `
<div>
  Hello, RxConnect!
</div>
`;

exports[`RxJS 5 and 6 passes properties as Observable 1`] = `
<div>
  123
</div>
`;

exports[`RxJS 5 and 6 receives new props 1`] = `
<div>
  15
</div>
`;

exports[`RxJS 5 and 6 receives new props 2`] = `
<div>
  15
</div>
`;

exports[`RxJS 5 and 6 receives new props 3`] = `
<div>
  -15
</div>
`;

exports[`RxJS 5 and 6 throws an error if mutation is neither an object or function 1`] = `
Array [
  "Mutation must be a plain object or function. Check rxConnect of Component. Got: ",
  Array [
    123,
  ],
]
`;

exports[`RxJS 5 and 6 throws an error if selector is neither an Observable or function 1`] = `
Array [
  "Selector must be a function or an Observable. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`RxJS 5 and 6 throws an error if selector returns non-Observable 1`] = `
Array [
  "Selector must return an Observable or an iterator of observables. Check rxConnect of Component. Got: ",
  undefined,
]
`;

exports[`RxJS 5 and 6 works with Array 1`] = `
<div>
  123
  bar
</div>
`;

exports[`RxJS 5 and 6 works with Generator 1`] = `
<div>
  123
  bar
</div>
`;

exports[`RxJS 5 and 6 works with Observable 1`] = `
<div>
  123
</div>
`;
